Added responsiveness to all Images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="top-header">
                     <!-- logo -->
                     <div class="logo">
-                        <a href="#"><img src="images/logo.png" title="Ajinkya Chanshetty" /></a>
+                        <a href="#"><img class="img-responsive" src="images/logo.png" title="Ajinkya Chanshetty" /></a>
                     </div>
                     <!-- /logo -->
                     <!--top-nav---->
@@ -54,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="box_content">        					                         
                                 <div class="box_content_center">
                                     <div class="form_content">
-                                        <a class="nav-logo" href="#"><img src="images/logo-arc.png" title="Ajinkya R Chanshetty" /></a>
+                                        <a class="nav-logo" href="#"><img class="img-responsive" src="images/logo-arc.png" title="Ajinkya R Chanshetty" /></a>
                                         <div class="menu_box_list">
                                             <ul>
                                                 <li class="active"><a href="#home" class="scroll"><span>home</span></a></li>
@@ -260,37 +260,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div id="owl-demo2" class="owl-carousel">
                     <div class="item">
                         <div class="client-logo">
-                            <a href="#"><img src="images/client-logo1.png" title="name" /></a>    
+                            <a href="#"><img class="img-responsive" src="images/client-logo1.png" title="name" /></a>    
                         </div>      	
                     </div>
                     <div class="item">
                         <div class="client-logo">
-                            <a href="#"><img src="images/client-logo2.png" title="name" /></a>    
-                        </div>      	
-                    </div>
-                    <div class="item">
-                        <div class="client-logo">
-                            <a href="#"><img src="images/client-logo3.png" title="name" /></a>    
-                        </div>      	
-                    </div>
-                    <div class="item">
-                        <div class="client-logo">
-                            <a href="#"><img src="images/client-logo4.png" title="name" /></a>    
-                        </div>      	
-                    </div>
-                    <div class="item">
-                        <div class="client-logo">
-                            <a href="#"><img src="images/client-logo5.png" title="name" /></a>    
-                        </div>      	
-                    </div>
-                    <div class="item">
-                        <div class="client-logo">
-                            <a href="#"><img src="images/client-logo1.png" title="name" /></a>    
-                        </div>      	
-                    </div>
-                    <div class="item">
-                        <div class="client-logo">
-                            <a href="#"><img src="images/client-logo2.png" title="name" /></a>    
+                            <a href="#"><img class="img-responsive" src="images/client-logo2.png" title="name" /></a>    
                         </div>      	
                     </div>
                     <div class="item">
@@ -300,12 +275,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="item">
                         <div class="client-logo">
-                            <a href="#"><img src="images/client-logo4.png" title="name" /></a>    
+                            <a href="#"><img class="img-responsive" src="images/client-logo4.png" title="name" /></a>    
                         </div>      	
                     </div>
                     <div class="item">
                         <div class="client-logo">
-                            <a href="#"><img src="images/client-logo5.png" title="name" /></a>    
+                            <a href="#"><img class="img-responsive" src="images/client-logo5.png" title="name" /></a>    
+                        </div>      	
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <a href="#"><img class="img-responsive" src="images/client-logo1.png" title="name" /></a>    
+                        </div>      	
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <a href="#"><img class="img-responsive" src="images/client-logo2.png" title="name" /></a>    
+                        </div>      	
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <a href="#"><img class="img-responsive" src="images/client-logo3.png" title="name" /></a>    
+                        </div>      	
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <a href="#"><img class="img-responsive" src="images/client-logo4.png" title="name" /></a>    
+                        </div>      	
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <a href="#"><img class="img-responsive" src="images/client-logo5.png" title="name" /></a>    
                         </div>      	
                     </div>
                 </div>
@@ -324,7 +324,7 @@ portfolio-grids
 <div class="portfolio-grids">
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic1.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic1.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
@@ -335,7 +335,7 @@ portfolio-grids
 </div>
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic2.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic2.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
@@ -346,7 +346,7 @@ portfolio-grids
 </div>
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic3.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic3.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
@@ -357,7 +357,7 @@ portfolio-grids
 </div>
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic4.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic4.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
@@ -368,7 +368,7 @@ portfolio-grids
 </div>
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic5.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic5.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
@@ -379,7 +379,7 @@ portfolio-grids
 </div>
 <div class="col-md-4 portfolio-grid">
 <div class="portfolio-grid-pic">
-<img src="images/portfolio-pic6.jpg" title="name" />
+<img class="img-responsive" src="images/portfolio-pic6.jpg" title="name" />
 <div class="portfolio-grid-pic-caption">
 <a href="#">Full Project</a>
 </div>
