--- a/index.html
+++ b/index.html
@@ -466,71 +466,71 @@ portfolio-grids
                     <li><a class="dribbble" href="#"><span> </span></a></li>
                 </ul>
             </div>
-<!--
-            <div class="col-md-8 contact-right">
-                <form>
-                    <div class="text-boxs">
-                        <div class="text-box">
-                            <input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
-                        </div>
-                        <div class="text-box">
-                            <input type="text" value="Last name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last name';}">
-                        </div>
-                        <div class="text-box">
-                            <input type="text" value="Your Email here" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Email here';}">
-                        </div>
-                        <div class="text-box">
-                            <input type="text" value="Project name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Project name';}">
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                    <div class="subject">
-                        <textarea placeholder="your message"></textarea>
-                        <input type="submit" value="" />
-                    </div>
-                </form>
-            </div>
+            <!--
+<div class="col-md-8 contact-right">
+<form>
+<div class="text-boxs">
+<div class="text-box">
+<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
+</div>
+<div class="text-box">
+<input type="text" value="Last name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last name';}">
+</div>
+<div class="text-box">
+<input type="text" value="Your Email here" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Email here';}">
+</div>
+<div class="text-box">
+<input type="text" value="Project name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Project name';}">
+</div>
+<div class="clearfix"> </div>
+</div>
+<div class="subject">
+<textarea placeholder="your message"></textarea>
+<input type="submit" value="" />
+</div>
+</form>
+</div>
 -->
             <div class="col-md-8 contact-right">
-            <div class="contact-form">
-            <form role="form" name="myForm" action="/send_email.php" method="POST">
-              <div class="form-group">
-                <label for="name">
-                  Name
-                </label>
-                <input type="text" placeholder="" id="form-name" name="name" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="email">
-                  Email
-                </label>
-                <input type="text" placeholder="" id="email" name="email" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="phone">
-                  Phone
-                </label>
-                <input type="text" id="phone"  name="phone" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="subject">
-                  subject
-                </label>
-                <input type="text" id="subject"  name="subject" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="comment">
-                  Message
-                </label>
-                <textarea placeholder="" rows="5" name="comment" class="form-control">
-                </textarea>
-              </div>
-              <button class="btn btn-info" type="submit"  onclick="validateForm()">
-                Submit
-              </button>
-            </form>
+                <div class="contact-form">
+                    <form role="form" name="myForm" action="https://formspree.io/me.aajinkya@gmail.com" method="POST">
+                        <div class="form-group">
+                            <label for="name">
+                                Name
+                            </label>
+                            <input type="text" placeholder="" id="form-name" name="name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">
+                                Email
+                            </label>
+                            <input type="text" placeholder="" id="email" name="email" name="_replyto" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">
+                                Phone
+                            </label>
+                            <input type="text" id="phone"  name="phone" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">
+                                subject
+                            </label>
+                            <input type="text" id="subject"  name="subject" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="comment">
+                                Message
+                            </label>
+                            <textarea placeholder="" rows="5" name="comment" class="form-control">
+                            </textarea>
+                        </div>
+                        <button class="btn btn-info" type="submit" value="Send">
+                            Submit
+                        </button>
+                    </form>
 
-          </div>
+                </div>
             </div>
             <div class="clearfix"> </div>
         </div>
