Added the CNAME File for hosting

--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="item">
                         <div class="about-left-grid">
                             <h2>Hello! <span>Nice to meet you!</span></h2>
-                            <p>I'm a passionate developer and a coder based in Pune. I ahve worked for some of the US based clients for web based projects. I have worked on E-commerce platform in sports domain. Also have worked on an social media platform. </p>
+                            <p>I'm a passionate developer and a coder based in Pune. I have worked for some of the US based clients for web based projects. I was involved in development of E-commerce platform in sports domain. Also have worked on an social media platform. </p>
 
                         </div>
                     </div>
                     <div class="item">
                         <div class="about-left-grid">
                             <h2>About <span>Technical stuff</span></h2>
-                            <p>During this tenure of my technical career, I have hand on experience with Java. Then I shifted to Front-End development. I have woked on HTML5, CSS3, BootStrap, JavaScript, AngularJS. My main focus is on JavaScript Stack and its Frameworks. I have also woked on NodeJS, ExpressJS, MongoDB and Angular2 as well. </p>
+                            <p>During this tenure of my technical career, I have hands on experience with Java. Then I shifted to Front-End development. I woked on HTML5, CSS3, BootStrap, JavaScript, AngularJS. My main focus is on JavaScript Stack and its Frameworks. I have also woked on NodeJS, ExpressJS, MongoDB and Angular2 as well. </p>
 
                         </div>
                     </div>
